Alteração no CSS boxshadow

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -19,9 +19,10 @@ html , body{
 }
 
 .cardWeather{
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    background-color: #ffffff80;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    background-color: #ffffff7a;
+    box-shadow: 15px 16px 95px #383737;
 }
 
 .bodyWeather{
