--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,10 +1,11 @@
 html , body{
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .bg{
     background-image: url(../img/bg.jpg);
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,14 +16,23 @@ html , body{
     align-content: center;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
 }
 
 .cardWeather{
-    -webkit-backdrop-filter: blur(2px);
-    backdrop-filter: blur(2px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 3%;
+    border-radius: 50%;
+    height: 95vh;
+    width: 45vw;
+    -webkit-backdrop-filter: blur(1px);
+    backdrop-filter: blur(1px);
     background-color: #ffffff7a;
     box-shadow: 15px 16px 95px #383737;
+
 }
 
 .bodyWeather{
@@ -34,4 +44,29 @@ html , body{
 
 .btnHide{
     display: none;
+    position: absolute;
+    top: 0;
+    float: left;
+    padding: 0.75%;
+    margin: 2%;
 }
+
+.glassCity{
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    background-color: #ffd00098;
+}
+.textInfo{
+    margin-top: -10%;
+    font-size: 100%;
+    font-weight: 1000;
+    text-shadow: 3px 3px 3px #00000033;
+}
+
+.weatherText{
+    margin-top: -1%;
+    font-size: 15pt;
+    font-weight: 1000;
+    text-shadow: 3px 3px 3px #00000033;
+}
+
